<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    tools:context="com.esteban.proyectosemana2.confirmacionDatos">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/nombrepantalla2"
        android:textStyle="bold"
        android:textSize="20dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombreusuario2"
        android:layout_marginTop="20dp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/tvnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoNombre"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechanacimiento2"
            android:textStyle="bold"
            android:paddingRight="10dp"
            />

        <TextView
            android:id="@+id/tvfechanacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textofechaNacimiento"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono2"
            android:textStyle="bold"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/tvtelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textotelefono"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:textStyle="bold">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email2"
        android:textStyle="bold"
        android:paddingRight="10dp"
        />

    <TextView
        android:id="@+id/tvemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoemail"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion2"
            android:textStyle="bold"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/tvdescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textodescripcion"
             />

    </LinearLayout>

    <Button
        android:id="@+id/editarDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="EditarDatos"
        android:background="@color/colorAccent"
        android:layout_marginTop="40dp"

        />




</LinearLayout>
